--- a/index.html
+++ b/index.html
@@ -5,45 +5,49 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+  <script src="script.js"></script>
   
   <title>Frontend Mentor | Interactive rating component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+
 </head>
 <body>
 
-  <!-- Rating state start -->
 
-  How did we do?
+  <main>
+      <div class="rating">
+        <div class="top">
+          <img id="starIcon" src="images/icon-star.svg" alt="">
+          <div class="content">
+            <h1>How did we do?</h1>
+            <p>Please let us know how we did with your support request. All feedback is appreciated 
+              to help us improve our offering!</p>
+          </div>
+          <div class="score">
+            <div class="mark">1</div>
+            <div class="mark">2</div>
+            <div class="mark">3</div>
+            <div class="mark">4</div>
+            <div class="mark">5</div>
+          
+          </div>
 
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
+          <button class="submit">
+            SUBMIT
+          </button>
+        </div>
+      </div>
+      <div class="thankYou">
+        <img id="tyIllustration"src="images/illustration-thank-you.svg" alt="">
+        <p id="selectedCount">You selected x out of 5</p>
+        <h1 id="tyTitle">Thank You!</h1>
+        <p id="message">We appreciate you taking the time to give a reating. <br> If you ever need more support, don't hesitate to get in touch!</p>
+      </div>
+  </main>
 
-  1 2 3 4 5
 
-  Submit
 
-  <!-- Rating state end -->
-
-  <!-- Thank you state start -->
-
-  You selected <!-- Add rating here --> out of 5
-
-  Thank you!
-
-  We appreciate you taking the time to give a rating. If you ever need more support, 
-  don’t hesitate to get in touch!
-
-  <!-- Thank you state end -->
-
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
 </body>
 </html>
